# Pokemon-Card-Identification

./: README.md
pokemonHub/: pyproject.toml  readme.md
pokemonHub/app/: main.py
pokemonHub/notebook/: core-notebook.ipynb
