[tool.poetry]
name = "pokemon-card-backend"
version = "0.1.0"
description = "Pokémon TCG card identification API using FastAPI and PyTorch"
authors = ["Your Name <your@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
torch = "^2.3.0"
torchvision = "^0.18.0"
pillow = "^10.3.0"
pandas = "^2.2.2"
python-multipart = "^0.0.9"
jupyter = "^1.0.0"
numpy = "^1.26.4"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
